<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:viewBindingIgnore="true"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.changepassword.ChangePasswordFragment">

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconSignifier="@drawable/ic_lock"
            app:labelText="@string/current_password"
            app:primaryColor="@color/white"
            app:secondaryColor="@color/white">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconSignifier="@drawable/ic_lock"
            app:labelText="@string/new_password"
            app:primaryColor="@color/white"
            app:secondaryColor="@color/white">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconSignifier="@drawable/ic_lock"
            app:labelText="@string/confirm_password"
            app:primaryColor="@color/white"
            app:secondaryColor="@color/white">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/finish_button"
            android:text="@string/change_password"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</layout>