<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".ui.vending.VendActivity">

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:iconSignifier="@drawable/ic_bolt"
            app:labelText="@string/meter_number">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/meter_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"

                />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:iconSignifier="@drawable/ic_naira"
            app:labelText="@string/amount">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="9"
                android:maxLines="1"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

              <Button
            android:id="@+id/proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/finish_button_alt"
            android:text="@string/proceed"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</layout>