<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.auth.LoginActivity">


        <ImageView
            android:id="@+id/logo2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="#fff"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:iconSignifier="@drawable/ic_user"
            app:labelText="@string/username"
            app:primaryColor="@color/white"
            app:secondaryColor="@color/white">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
            android:id="@+id/pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconSignifier="@drawable/ic_lock"
            app:labelText="@string/password"
            app:primaryColor="@color/white"
            app:secondaryColor="@color/white">

            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="Forgot password"
                android:textColor="@color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/finish_button"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


    </LinearLayout>


</layout>